# HistoryGluon

./: .gitignore  AUTHORS  Makefile.am  README  TODO  autogen.sh  configure.ac  history-gluon-1.0.pc  history-gluon-1.0.pc.in  protocol.txt
HistoryGluon/: Makefile.am  README  build.xml
HistoryGluon/src/com/miraclelinux/historygluon/: BasicStorageDriver.java  BridgeWorker.java  CassandraDriver.java  ConcurrentHistoryDataSet.java  ConnectionThread.java  ExecTimeObserver.java  HBaseDriver.java  HistoryData.java  HistoryDataComparatorPreferId.java  HistoryDataSet.java  HistoryGluon.java  MemDriver.java  RiakDriver.java  Statistics.java  StorageDriver.java  Utils.java
HistoryGluon/test/com/miraclelinux/historygluon/: HistoryDataTest.java  UtilsTest.java
cli/src/: Makefile.am  history-gluon-cli.cc
client-lib-c/: Makefile.am  README  history-gluon.c  history-gluon.h
client-lib-c/src/: Makefile.am  history-gluon.c  history-gluon.h  message.c  message.h
client-lib-c/test/: Makefile.am  README  test-client-bug-follow-up.c  test-client-lib.c  test-context.c  test-utils.c  test-utils.h  utils.c  utils.h
client-php-ext/: Makefile.am  history-gluon.ini
client-php-ext/src/: config.m4  history-gluon-php-ext.c  history-gluon-php-ext.h
client-php-ext/test/: ApiTest.php  README
client-ruby-ext/: extconf.rb  rb-history-gluon.c
client-ruby-ext/lib/: historygluon.rb
client-ruby-ext/test/: run-test.rb  test_history_gluon.rb
server/: Makefile.am  README  build.xml  build.xml.in  history-gluon-server.in  run-test.sh.in
server/conf/: Makefile.am  history-gluon.conf
server/src/com/miraclelinux/historygluon/: BasicStorageDriver.java  BridgeWorker.java  CassandraDriver.java  ConcurrentHistoryDataSet.java  ConnectionThread.java  DataStreamThread.java  DeleteType.java  ErrorCode.java  ExecTimeObserver.java  HBaseDriver.java  HistoryData.java  HistoryDataComparatorPreferId.java  HistoryDataSet.java  HistoryGluon.java  HistoryStreamElement.java  HistoryStreamer.java  InternalCheckException.java  MemDriver.java  NullDriver.java  QueryType.java  RiakDriver.java  Statistics.java  StorageDriver.java  Utils.java
server/test/com/miraclelinux/historygluon/: AllTests.java  BasicStorageDriverTest.java  HistoryDataTest.java
test/: Makefile.am  run-test.sh  test-client-bug-follow-up.c  test-client-lib.c  test-utils.c  test-utils.h
